src/main/webapp/css/admin/imcms-admin_panel.css
.imcms-admin {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
    z-index: 100;
}

.imcms-admin-panel {
    background-color: #fff;
    -webkit-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25);
    box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25);
    display: block;
    padding-left: 2%;
    padding-right: 2%;
    width: 100%;
    min-height: 90px;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    -ms-transition: all .3s;
    -o-transition: all .3s;
    transition: all .3s;
    position: absolute;
    z-index: 2;
    border-bottom: 0 solid #ccc;
}

.imcms-admin-panel__item {
    display: block;
    float: left;
    margin: 17px 30px 17px 0;
    height: 56px;
}

.imcms-admin-panel__logo {
    background: url("/images_new/icon_logo_main.png") no-repeat 0 0;
    background-size: contain;
    text-indent: -99999px;
    display: block;
    height: 100%;
    width: 115px;
}

.imcms-admin-panel__title {
    color: #587380;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 15px;
    font-weight: 400;
    line-height: 56px;
    text-transform: uppercase;
}

.imcms-admin-panel__meta {
    color: #587380;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 15px;
    font-weight: 400;
    line-height: 56px;
    text-transform: uppercase;
}

.imcms-admin-panel__item .imcms-flag {
    margin: 19px 53px 19px 0;
}

.imcms-admin-panel__item .imcms-flag--en:after,
.imcms-admin-panel__item .imcms-flag--sw:after {
    display: block;
}

.imcms-panel {
    display: block;
    float: right;
}

.imcms-panel__items {
    display: block;
    height: 100%;
    min-width: 880px;
    width: 100%;
    text-align: right;
}

.imcms-panel__item {
    background-position-x: 50%;
    background-position-y: 11px;
    background-size: initial;
    background-repeat: no-repeat;
    background-attachment: initial;
    background-origin: initial;
    background-clip: initial;
    background-color: initial;
    color: #2f4047;
    cursor: pointer;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 13px;
    font-weight: 600;
    line-height: 15px;
    text-transform: uppercase;
    text-align: center;
    display: inline-block;
    padding-top: 41px;
    position: relative;
    min-width: 110px;
    height: 100%;
    vertical-align: middle;
}

.imcms-panel__item--logout {
    background: none;
    cursor: default;
    text-align: center;
    padding-top: 0;
}

.imcms-panel__item--active:before,
.imcms-panel__item:hover:before {
    content: "";
    background-color: #0b94d8;
    display: block;
    position: absolute;
    bottom: -17px;
    left: 0;
    width: 100%;
    height: 3px;
}

.imcms-panel__item--logout:hover:before {
    display: none;
}

.imcms-panel__item--specific {
    background-image: url('/images_new/admin_panel/icon_edit.png');
}

.imcms-panel__item--publish-of:after,
.imcms-panel__item--page-info:after,
.imcms-panel__item--document:after,
.imcms-panel__item--specific:after,
.imcms-panel__item--admin:after {
    content: "";
    background-color: #d3d8de;
    display: block;
    position: absolute;
    top: -17px;
    right: -1px;
    height: 90px;
    width: 1px;
}

.imcms-panel__item--logout button {
    margin: 5px 10px 5px 10px;
}

.imcms-panel__item--versioning-off {
    display: none;
}

.imcms-panel__item--publish-of.imcms-panel__item--has-newer-version {
    opacity: 1;
    cursor: pointer;
}

.imcms-panel__item.imcms-panel__item--has-newer-version:before,
.imcms-panel__item.imcms-panel__item--has-newer-version:hover:before {
    content: "";
    background-color: #FF756F;
    display: block;
    position: absolute;
    bottom: -17px;
    left: 0;
    width: 100%;
    height: 3px
}

#imcmsAdminSpecial {
    width: 100%;
    position: relative;
    z-index: 1499;
    overflow: hidden;
    border-bottom: 1px solid #ccc;
    background-color: #fff;
    -webkit-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
    -moz-box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
    box-shadow: 0 6px 14px 0 rgba(0, 0, 0, 0.25), inset 0 -23px 30px 0 rgba(0, 0, 0, 0.04);
}

#imcmsAdminSpecial.imcms-collapsible {
    max-height: 10000px; /*dummy value*/
    border-bottom: 1px solid #ccc;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -ms-transition: all .5s;
    -o-transition: all .5s;
    transition: all .5s;
}

#imcmsAdminSpecial.imcms-collapsible.imcms-collapsible-hidden {
    display: none;
}

#imcmsAdminSpecialInner {
    max-width: 1000px;
    margin: 0 auto;
    padding: 0;
}

.imcms-panel__item--settings {
    background-image: url("/images_new/admin_panel/icon_settings.png");
    min-width: 25px;
    background-position-y: center;
}

.imcms-panel__item--admin {
    background-image: url("/images_new/admin_panel/icon_admin.png");
}

.imcms-panel__item--document {
    background-image: url("/images_new/admin_panel/icon_doc.png");
}

.imcms-panel__item--page-info {
    background-image: url("/images_new/admin_panel/icon_pageinfo.png");
}

.imcms-panel__item--publish-of {
    opacity: 0.4;
    cursor: not-allowed;
    background-image: url("/images_new/admin_panel/icon_publish.png");
}

.imcms-panel__item--preview {
    background-image: url("/images_new/admin_panel/icon_preview.png");
}

.imcms-panel__item--edit {
    background-image: url("/images_new/admin_panel/icon_edit.png");
}

.imcms-panel__item--public {
    background-image: url("/images_new/admin_panel/icon_public.png");
}

.imcms-admin-panel__item:last-of-type {
    margin-right: 0;
    width: 65%;
}

.imcms-panel__item--settings:hover {
    background-image: url("../images_new/admin_panel/icon_settings_active.png");
}
/* ... */

